--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "@apollo/server": "^4.3.0",
     "@graphql-tools/schema": "^9.0.12",
     "@prisma/client": "^4.0.0",
+    "graphql": "^16.6.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
