--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,7 @@
     "graphql-ws": "^5.11.2",
     "lodash.merge": "^4.6.2",
     "next-auth": "^4.18.7",
+    "react": "^18.2.0",
     "ws": "^8.11.0"
   },
   "devDependencies": {
